--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,7 +111,7 @@ p {
     color: #ffffff;
 }
 
-.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img, .search-engine-optimization {
+.search-engine-optimization img, .online-reputation-management img, .social-media-marketing img {
     max-height: 200px;
 }
 
